# camtools

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  __init__.py  apply_format.sh  camera.py  colmap.py  colormap.py  convert.py  geometry.py  image.py  io.py  normalize.py  plot.py  project.py  pyproject.toml  raycast.py  release.sh  sanity.py  setup.py  solver.py  test_convert.py
.github/workflows/: docs.yml  formatter.yml  pypi.yml  pypi_test.yml  unit_test.yml
camtools/: __init__.py  artifact.py  backend.py  camera.py  colmap.py  colormap.py  convert.py  geometry.py  image.py  io.py  metric.py  normalize.py  plot.py  pointcloud.py  project.py  raycast.py  render.py  sanity.py  solver.py  stat.py  transform.py  typing.py  util.py  utility.py
camtools/tools/: __init__.py  cli.py  compres_images_new_api.md  compress_images.py  crop_boarders.py  crop_borders.py  draw_bbox.py  draw_bboxes.py
cpp/: CMakeLists.txt  pointcloud_cropper.cpp  stream_compact.h
docs/: api.rst  camera.rst  conf.py  contributing.rst  convert.rst  coordinates.rst  features.rst  index.rst  installation.rst  project.rst
docs/_static/: custom.css
docs/api/: artifact.rst  camera.rst  colmap.rst  colormap.rst  convert.rst  geometry.rst  image.rst  io.rst  metric.rst  normalize.rst  project.rst  raycast.rst  render.rst  sanity.rst  solver.rst  transform.rst  util.rst
playground/: bench_decorators.py  bench_w_decorator.py  bench_wo_decorator.py  demo.py  polar.py
scripts/: trim_white_borders.py
test/: conftest.py  test_backend.py  test_backend_bench.py  test_cli.py  test_compress_images.py  test_convert.py  test_convert_bench.py  test_image.py  test_project.py  test_raycast.py  test_render.py  test_solver.py  test_typing.py
